# elixir-desktop-client

./: .gitignore  CMakeLists.txt  README-e2e.md  README-tauri-dev.md  README.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
resources/: qml.qrc
scripts/: env_vlc.sh  package_macos.sh  smoke_auth_play.py
src/: App.css  App.tsx  api.ts  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/backend/: ApiClient.cpp  ApiClient.h  ControlPlaneClient.cpp  ControlPlaneClient.h  LibraryModel.cpp  LibraryModel.h  MediaItem.h  MpvItem.cpp  MpvItem.h  PlayerController.cpp  PlayerController.h  ServerDiscovery.cpp  ServerDiscovery.h  ServerListModel.cpp  ServerListModel.h  SessionManager.cpp  SessionManager.h
src/qml/: Theme.qml  main.qml
src/qml/components/: HeroBanner.qml  IconButton.qml  LandscapeCard.qml  MediaCard.qml  MediaRow.qml  PillTag.qml  PosterGrid.qml  ServerListItem.qml  Sidebar.qml  SidebarItem.qml  TopBar.qml
src/qml/views/: ConnectServerView.qml  DetailsView.qml  HomeView.qml  PlayerView.qml  SettingsView.qml
