[package]
name = "elixir-client"
version = "0.1.0"
description = "Elixir desktop client"
authors = ["Elixir"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
