[package]
name = "elixir-client"
version = "0.1.0"
description = "Elixir desktop client"
authors = ["Elixir"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.5", features = ["wry", "protocol-asset"] }
mdns-sd = "0.11"
which = "4"
vlc-rs = "0.3"
raw-window-handle = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
